# workout

./: pyproject.toml
src/: 01.py  02.py  03.py
