[tool.poetry]
name = "50-ten-minute-python-exercises"
version = "0.1.0"
description = "Let's study Python!"
authors = ["jvitorcardoso <aspirantevitor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
blue = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
